--- a/CHANGELOG
+++ b/CHANGELOG
@@ -30,3 +30,11 @@ and this project adheres to [Semantic Versioning](http://semver.org/spec/v2.0.0.
 - Rename environment variable ENV_VAR_METIER_LOG_FILE to LOG_FILE_JSON
 ### Removed
 - Nothing
+
+## [1.1.1] - 2017-09-08
+### Added
+- Nothing
+### Changed
+- Fix bug and replace FileAppender by RollingFileAppender
+### Removed
+- Nothing
